fix up message bubble spacing, and vary the spacing slightly by when it is a repeat send from the same person, or if the message belongs to a new message group

--- a/src/client/style/dogo.styl
+++ b/src/client/style/dogo.styl
@@ -136,6 +136,7 @@ logo()
 	.conversations
 		min-height 254px;
 		.messageBubble
+			margin 7px 7px 0 36px;
 			.name
 				padding 5px 8px 0;
 				text-shadow: 0 1px 0 #ffffff;
